champlain-bounding-box: Include extremities in champlain_bounding_box_is_valid function

https://bugzilla.gnome.org/show_bug.cgi?id=764611